# Hazelnupp

./: .drone.yml  .gitignore  Hazelnupp.sln  Hazelnupp.vpp  LICENSE  license.txt  readme.md
Brand/: nupp.psd
Doxygen/: doxyfig  doxyrun.sh
Hazelnupp/: CMakeLists.txt  CmdArgsInterface.cpp  CmdArgsInterface.h  DataType.h  FloatValue.cpp  FloatValue.h  Hazelnupp.cpp  Hazelnupp.h  Hazelnupp.vcxproj  Hazelnupp.vcxproj.filters  HazelnuppException.h  IntValue.cpp  IntValue.h  ListValue.cpp  ListValue.h  ParamConstraint.h  Parameter.cpp  Parameter.h  Placeholders.h  StringTools.cpp  StringTools.h  StringValue.cpp  StringValue.h  Value.cpp  Value.h  Version.h  VoidValue.cpp  VoidValue.h  main.cpp
Hazelnupp/doxygen/: Makefile  doxyfig  doxyrun.sh
Hazelnupp/exec/: main.cpp
Hazelnupp/include/Hazelnupp/: CmdArgsInterface.h  DataType.h  HazelnuppException.h  IntValue.h  ParamConstraint.h  Version.h
Hazelnupp/src/: CmdArgsInterface.cpp  FloatValue.cpp  IntValue.cpp  ListValue.cpp  Parameter.cpp  StringTools.cpp  StringValue.cpp  Value.cpp  VoidValue.cpp
Hazelnupp/test/: Abbreviations.cpp  Basics.cpp  Catch2.h  Constraints.cpp  Conversion.cpp  Descriptions.cpp  main.cpp
INCLUDE/: Hazelnupp.cpp  Hazelnupp.h  deggl  generate.sh
StaticTestProject/: StaticTestProject.vcxproj  main.cpp
Test_Hazelnupp/: Abbreviations.cpp  Basics.cpp  Constraints.cpp  Constraints.h  Conversion.cpp  Descriptions.cpp  Test_Hazelnupp.cpp  Test_Hazelnupp.vcxproj  Test_Hazelnupp.vcxproj.filters  helper.h
docs/: Abbreviations_8cpp.html  Abbreviations_8cpp__incl.map  Abbreviations_8cpp__incl.md5  (+355 more)
(+83 files in other folders)
